--- a/IHC/noponto/templates/telas/base.html
+++ b/IHC/noponto/templates/telas/base.html
@@ -18,8 +18,7 @@
         <div class="container">
             <div class="logo">
                 <a href="{% url 'index' %}"
-                    style="text-decoration: none; font-size: 1.5rem; font-weight: 800; color: var(--secondary-color);">
-                    Bus<span style="color: var(--primary-color);">Go</span>
+                   <img src="{% static 'noponto/imagens/logo.png' %}" alt="No Ponto Logo" class="logo-img">
                 </a>
             </div>
             
