--- a/IHC/noponto/templates/telas/index.html
+++ b/IHC/noponto/templates/telas/index.html
@@ -63,18 +63,18 @@
         </div>
         <p class="section-subtitle">Descubra rotas populares e preços iniciais.</p>
 
-
-            <div class="destination-card"
-                 style="background-image: url('{% static 'noponto/imagens/Jurandir.jpg' %}');">
+         <div class="destination-card"
+                style="background-image: url('{% static 'noponto/imagens/Jurandir.jpg' %}'  );">
+                <div class="card-overlay"></div>
                 <div class="card-info">
-                <div class="card-overlay></div>
-                    <h3>Angical do Piauí</h3>
+                    <h3>Angical do Piauí.</h3>
                     <div class="price-tag">
                         <span>De Teresina</span>
                         <span class="price">$20.00</span>
                     </div>
                 </div>
-            </div>
+         </div>
+            
 
             <div class="destination-card"
                 style="background-image: url('{% static 'noponto/imagens/rio-de-janeiro.jpg'%}');">
